--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "deploy:preview": "vercel"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
     "next": "15.3.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
